--- a/MissionAssignment2/wwwroot/css/default.css
+++ b/MissionAssignment2/wwwroot/css/default.css
@@ -28,6 +28,8 @@ li {
     list-style-type: none;
 }
 
+
+
 .Outcome {
     color: bisque;
     padding-left: 50px;
@@ -68,4 +70,9 @@ li {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.footer-footer {
+    font-size: 30px;
+    color: beige;
 }
