--- a/MissionAssignment2/Views/Logan/GradeCalculator.cshtml
+++ b/MissionAssignment2/Views/Logan/GradeCalculator.cshtml
@@ -36,7 +36,11 @@
 <br />
 <br />
 
-<div>Final Score: <script>document.write(GradeScore)</script></div>
-<div>Letter Grade:<script>document.write(GradeLetter)</script></div>
+<div>Final Score:
+<script>document.write(GradeScore)</script></div>
+<div>Letter Grade:
+<script>document.write(GradeLetter)</script></div>
 
-<script src="js/GradeCalculator.js"></script>
+
+<script src="~/lib/jquery/jquery-3.6.0.min.js"></script>
+<script src="~/js/GradeCalculator.js"></script>
