--- a/MissionAssignment2/Views/Shared/_Layout.cshtml
+++ b/MissionAssignment2/Views/Shared/_Layout.cshtml
@@ -10,6 +10,10 @@
 
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/css/default.css" rel="stylesheet" />
+    <script src="~/lib/jquery/jquery-3.6.0.min.js"></script>
+    <script src="@Url.Content("~/js/GradeCalculator.js")" defer></script>
+    <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
+
 
 </head>
 <body>
@@ -31,8 +35,7 @@
     <br /><br /><br /><br />
 
 
-    <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
-    <script src="~/lib/jquery/jquery-3.6.0.min.js"></script>
+
 
 </body>
 </html>
